# ta-hdi-fmp

./: .gitignore  adaptive_hdi.m  compare_paths_approx.m  compute_discrete_curvature.m  export_matlab_baseline.m  get_Informed_RRT_Star_path_pool.m  main_core_framework.m  matlab_test.m  min_point_to_obstacles.m  point_to_obstacle_distance.m  push_traj_clear.m  run_benchmark.m  run_fast_mode_local.m  run_matlab_test.m  run_single_trial.m  score_path.m  test_framework.m  tips.md  verify_trajectory.m
.workbuddy/memory/: 2026-04-23.md  2026-04-25.md  2026-04-26.md  2026-04-28.md  MEMORY.md
archive/: demo.m  get_Informed_RRT_Star_path_monitored_legacy.m
benchmark_results/: fast_mode_5runs.csv  matlab_baseline_30runs.csv
docs/: TA-HDI-FMP-Algorithm-Analysis.md  claude_plan.md  codex_plan.md  fast_mode_参数总结与敏感性说明.md  suggest.md  work_plan.md  workbuddy_plan.md  仿真运行详细教程.md  周报_20260426.md  总结.md  算法部分初稿_TA-HDI-FMP_v0.1.md  论文初稿_TA-HDI-FMP_v0.1.md  项目完整指南.md
func/: demo_processing.m  fuzregre_modulation_yout.m  fuzregre_param_train_t1.m  fuzregre_yout_t1.m  fuzzy_clustering.m  fuzzymodellingCandGK.m
python_core/: pyproject.toml
python_core/ta_hdi_fmp/: __init__.py  compare.py  config.py  demo_processing.py  fmp_modulation.py  fuzzy_clustering.py  fuzzy_model.py  geometry.py  hdi.py  planner.py  push_repair.py  score.py
python_core/tests/: test_fmp_integration.py  test_framework_py.py  test_stage1_geometry.py
ta_hdi_ws/: README_ROS2_FIRST_RUN.md
ta_hdi_ws/src/ta_hdi_fmp_core/: package.xml  setup.cfg  setup.py
ta_hdi_ws/src/ta_hdi_fmp_core/resource/: ta_hdi_fmp_core
ta_hdi_ws/src/ta_hdi_fmp_core/ta_hdi_fmp_core/: __init__.py  config.py  curvature.py  geometry.py  hdi.py  planner_api.py  rrt_pool.py  score.py  test_visualization.py  verify.py
ta_hdi_ws/src/ta_hdi_fmp_mobile_adapter/: package.xml  setup.cfg  setup.py
ta_hdi_ws/src/ta_hdi_fmp_mobile_adapter/launch/: mobile_adapter.launch.py
ta_hdi_ws/src/ta_hdi_fmp_mobile_adapter/resource/: ta_hdi_fmp_mobile_adapter
ta_hdi_ws/src/ta_hdi_fmp_mobile_adapter/ta_hdi_fmp_mobile_adapter/: __init__.py  benchmark_runner.py  mobile_adapter_node.py
ta_hdi_ws/src/ta_hdi_fmp_msgs/: CMakeLists.txt  package.xml
ta_hdi_ws/src/ta_hdi_fmp_msgs/msg/: Obstacle2D.msg
ta_hdi_ws/src/ta_hdi_fmp_msgs/resource/: ta_hdi_fmp_msgs
ta_hdi_ws/src/ta_hdi_fmp_msgs/srv/: PlanPath2D.srv
ta_hdi_ws/src/ta_hdi_fmp_planner/: package.xml  setup.cfg  setup.py
ta_hdi_ws/src/ta_hdi_fmp_planner/launch/: planner_min.launch.py
ta_hdi_ws/src/ta_hdi_fmp_planner/resource/: ta_hdi_fmp_planner
ta_hdi_ws/src/ta_hdi_fmp_planner/ta_hdi_fmp_planner/: __init__.py  planner_node.py
(+1 files in other folders)
