[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ta-hdi-fmp-python-core"
version = "0.1.0"
description = "Python core for TA-HDI-FMP framework migration"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pytest>=8.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
