<?xml version="1.0"?>
<package format="3">
  <name>ta_hdi_fmp_core</name>
  <version>0.1.0</version>
  <description>Core TA-HDI-FMP planning library for ROS2.</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
