<?xml version="1.0"?>
<package format="3">
  <name>ta_hdi_fmp_mobile_adapter</name>
  <version>0.1.0</version>
  <description>Pure pursuit adapter for mobile robot tracking TA-HDI-FMP paths.</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
