<?xml version="1.0"?>
<package format="3">
  <name>ta_hdi_fmp_planner</name>
  <version>0.1.0</version>
  <description>ROS2 service planner node for TA-HDI-FMP.</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>ta_hdi_fmp_msgs</depend>
  <depend>ta_hdi_fmp_core</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
